paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/add_op_1a/sample_005/target.compile.log
error[E0277]: `main` has invalid return type `i32`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/add_op_1a/sample_005/target.rs:1:14
  |
1 | fn main() -> i32 {
  |              ^^^ `main` can only return types that implement `Termination`
  |
  = help: consider using `()`, or a `Result`

warning: value assigned to `n` is never read
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/add_op_1a/sample_005/target.rs:2:13
  |
2 |     let mut n: i32 = 4;
  |             ^
  |
  = help: maybe it is overwritten before being read?
  = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `m`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/add_op_1a/sample_005/target.rs:3:9
  |
3 |     let m: i32 = 3;
  |         ^ help: if this is intentional, prefix it with an underscore: `_m`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 1 previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0277`.